@startuml
'https://plantuml.com/class-diagram

class House{}

class HouseBuilder{
    + House house;

    + void buildBase();
    + void buildWall();
    + void buildRoof();
    + House build();
}

class CommonBuilding{}

class TowerBuilding{}

class HouseDirector{
    - HouseBuilder houseBuilder;
}

class Client{}

HouseBuilder *-- House

HouseBuilder <|-- CommonBuilding
HouseBuilder <|-- TowerBuilding

HouseDirector o-- HouseBuilder

HouseDirector <.. Client
CommonBuilding <.. Client
TowerBuilding <.. Client


@enduml